# wechat-header-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DIMENSION_CONTROL_FINAL_REPORT.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: claude.json  mcp-config.json
src/wechat_header_mcp/: __init__.py  server.py
