[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-header-mcp"
version = "1.0.0"
description = "公众号头图MCP服务器 - 专业的微信公众号头图生成服务"
authors = [
    {name = "MCP Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "wechat", "header", "image-generation", "jiemeng-ai", "volcengine"]

dependencies = [
    "fastmcp>=0.11.0",
    "httpx>=0.25.0",
    "pillow>=9.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/wechat-header-mcp"
Repository = "https://github.com/your-org/wechat-header-mcp"
Documentation = "https://github.com/your-org/wechat-header-mcp#readme"
Issues = "https://github.com/your-org/wechat-header-mcp/issues"

[project.scripts]
wechat-header-mcp = "wechat_header_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_header_mcp"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]